--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,59 +1,62 @@
-
-body{
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f7f7f7;
     color: #333;
 }
-.container{
+
+main {
+    min-height: 500px;
+}
+
+.container {
     max-width: 1140px;
     margin: 0 auto;
     padding: 15px;
 }
-*{
-    font-family: 'Roboto',sans-serif;
+
+* {
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-main{
-    min-height: 500px;
-}
+
 /* Cabecalho */
-header{
+header {
     width: 100%;
     background-color: #FF8C00;
     display: flex;
     justify-content: space-around;
 }
 
-.logo-imagem{
+.logo-imagem {
     width: 50px;
     height: 50px;
     border-radius: 25px;
     background-color: black;
 }
 
-.containerprincipal{
+.containerprincipal {
     padding: 17px;
     display: flex;
     align-items: center;
 }
 
-.textoh1{
+.textoh1 {
     margin-left: 20px;
 }
 
-.menu li{
-    font-family: 'Roboto',sans-serif;
+.menu li {
+    font-family: 'Roboto', sans-serif;
     align-items: center;
     display: inline-block;
     margin: 0 10px;
 }
 
-.menu li a{
-    font-family: 'Roboto',sans-serif;
+.menu li a {
+    font-family: 'Roboto', sans-serif;
     font-size: 24px;
     text-decoration: none;
     color: white;
@@ -63,10 +66,11 @@ header{
     display: flex;
 }
 
-.menu li a :hover{
+.menu li a :hover {
     background-color: aqua;
 }
-.textoh1{
+
+.textoh1 {
     color: white;
 }
 
@@ -75,19 +79,20 @@ a {
     text-decoration: none;
     color: coral;
 }
+
 #login {
     text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction:column-reverse;
+    flex-direction: column-reverse;
 }
 
 .telefone input {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
@@ -97,7 +102,7 @@ a {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
@@ -108,7 +113,7 @@ a {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
@@ -119,11 +124,11 @@ a {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
-
+    margin-bottom: 15px;
 }
 
 .senha {
@@ -134,67 +139,7 @@ a {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
-    height: 40px;
-    padding-left: 15px;
-    background-color: #000000;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding-right: 40px; 
-}
-.cep input{
-    color: #ffffff;
-    border-radius: 15px;
-    border: none;
-    width: 350px;
-    height: 40px;
-    padding-left: 15px;
-    background-color: #000000;
-    margin-top: 15px;
- 
-    padding-right: 40px;
-
-}
-.rua input{
-    color: #ffffff;
-    border-radius: 15px;
-    border: none;
-    width: 350px;
-    height: 40px;
-    padding-left: 15px;
-    background-color: #000000;
-    margin-top: 15px;
-  
-    padding-right: 40px;
-}
-.numero input{
-    color: #ffffff;
-    border-radius: 15px;
-    border: none;
-    width: 350px;;
-    height: 40px;
-    padding-left: 15px;
-    background-color: #000000;
-    margin-top: 15px;
-
-    padding-right: 40px;
-}
-.cidade input{
-    color: #ffffff;
-    border-radius: 15px;
-    border: none;
-    width: 350px;
-    height: 40px;
-    padding-left: 15px;
-    background-color: #000000;
-    margin-top: 15px;
-    padding-right: 40px;
-}
-.estado input{
-    color: #ffffff;
-    border-radius: 15px;
-    border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
@@ -203,7 +148,73 @@ a {
     padding-right: 40px;
 }
 
-.senha i{
+.cep input {
+    color: #ffffff;
+    border-radius: 15px;
+    border: none;
+    width: 250px;
+    height: 40px;
+    padding-left: 15px;
+    background-color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-right: 40px;
+
+}
+
+.rua input {
+    color: #ffffff;
+    border-radius: 15px;
+    border: none;
+    width: 250px;
+    height: 40px;
+    padding-left: 15px;
+    background-color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-right: 40px;
+}
+
+.numero input {
+    color: #ffffff;
+    border-radius: 15px;
+    border: none;
+    width: 250px;
+    height: 40px;
+    padding-left: 15px;
+    background-color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-right: 40px;
+}
+
+.cidade input {
+    color: #ffffff;
+    border-radius: 15px;
+    border: none;
+    width: 250px;
+    height: 40px;
+    padding-left: 15px;
+    background-color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-right: 40px;
+}
+
+.estado input {
+    color: #ffffff;
+    border-radius: 15px;
+    border: none;
+    width: 250px;
+    height: 40px;
+    padding-left: 15px;
+    background-color: #000000;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-right: 40px;
+}
+
+.senha i {
     font-size: 15px;
     cursor: pointer;
     position: absolute;
@@ -211,6 +222,7 @@ a {
     top: 50%;
     transform: translateY(-50%);
 }
+
 .confirmarsenha {
     position: relative;
     margin-bottom: 15px;
@@ -220,18 +232,18 @@ a {
     color: #ffffff;
     border-radius: 15px;
     border: none;
-    width: 350px;
+    width: 250px;
     height: 40px;
     padding-left: 15px;
     background-color: #000000;
-    padding-right: 40px; 
+    padding-right: 40px;
 }
 
 .confirmarsenha i {
     font-size: 15px;
     cursor: pointer;
     position: absolute;
-    right: 10px; 
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -278,7 +290,7 @@ ul {
 }
 
 a {
-  
+
     text-decoration: none;
 }
 
@@ -305,18 +317,19 @@ h3 {
 /* Rodapé */
 
 .rodape {
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #FF8C00;
     color: #fff;
     padding: 10px;
-    margin: 0;
+    margin-top: 50px;
     text-align: center;
     bottom: 0;
     width: 100%;
     z-index: 1;
     display: fixed;
     align-items: center;
-    justify-content: center; /* Centraliza horizontalmente */
+    justify-content: center;
+    /* Centraliza horizontalmente */
 
 }
 
@@ -340,21 +353,50 @@ h3 {
 .rodape a:hover {
     text-decoration: underline;
 }
-.linha-rodape{
+
+.linha-rodape {
     display: flex;
     justify-content: space-between;
     text-align: left;
 }
-.coluna-rodape{
+
+.coluna-rodape {
     flex: 1;
 }
+
 /* Guia */
 
 .separador {
     width: 100%;
     height: 2px;
     background-color: #333;
-    margin: 20px 0; /* Espaçamento acima e abaixo da barra de separação */
+    margin: 20px 0;
+    /* Espaçamento acima e abaixo da barra de separação */
 }
 
+/* Pagina principal */
+
+.office {
+    display: flex;
+    justify-content: space-around;
+    
+    margin: 0;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+.item{
+    border-radius: 50px;
+}
+
+.trabalho img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.traba img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
 
