--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@ body {
 
 main {
     min-height: 500px;
+    
 }
 
 .container {
@@ -26,7 +27,7 @@ main {
 /* Cabecalho */
 header {
     width: 100%;
-    background-color: #FF8C00;
+    background-color: 		#0000CD;
     display: flex;
     justify-content: space-around;
 }
@@ -35,7 +36,7 @@ header {
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    background-color: black;
+
 }
 
 .containerprincipal {
@@ -318,7 +319,7 @@ h3 {
 
 .rodape {
     font-family: 'Roboto', sans-serif;
-    background-color: #FF8C00;
+    background-color: 	#0000CD;
     color: #fff;
     padding: 10px;
     margin-top: 50px;
@@ -331,6 +332,9 @@ h3 {
     justify-content: center;
     /* Centraliza horizontalmente */
 
+}
+.rodape h3{
+    color: white;
 }
 
 
@@ -409,7 +413,6 @@ h3 {
     margin-bottom: 30px;
 }
 
-.h3{
-    display: flex;
-    justify-content: space-around;
+body h1{
+    text-align: center;
 }
